--- a/career.html
+++ b/career.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f630533c215f8ea8a5cfcee" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>Uxmint Design - About Us</title>
+  <title>Uxmint Design - Career</title>
   <meta name="description" content="Holistic Design Studio with industry experts specialising in research based Experience Design (UX), Interface Design (UI), Branding and Product Design and Development." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="Uxmint Design - About Us" property="twitter:title">
@@ -40,7 +40,7 @@
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a></div>
   <div class="sectionhero">
     <div class="wrapper hero w-container">
-      <div class="text-accent-1">ABOUT US</div>
+      <div class="text-accent-1">CAREER</div>
       <div class="heading-container">
         <div class="text-h1_1">There is always a better way to do it <a style="color: #fa4e2e; cursor: unset;">&amp; we find it</a></div>
       </div>
@@ -60,50 +60,64 @@
     </div>
     <div class="wrapper w-container"></div>
   </div>
-  <div class="image-section slide-image"><img src="images/Mask Group 105.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
 
-  <div class="section-new team">
+  <div class="section-new team career">
     <div class="wrapper w-container">
       <div class="w-layout-grid grid-about-us-target">
         <div>
           <div class="div-aboutus-services">
-            <div class="text-h2-5">Startups</div>
+            <div class="text-h2-5-orange">UI Designer</div>
           </div>
-          <div class="text-h3 black">We’ve been there and we exactly know the struggles and what it takes to build a product from the scratch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch.</div>
+          <div class="text-h3 black">
+            Experience – 2 to 4 years <br>
+            Working Location – Chennai, India <br>
+            Notice Period – Immediate to 15 days <br><br>
+          </div>
+          <div class="text-h2-5-5-orange">Job Description</div>
+          <div class="text-h3 black">
+            - Create styleguide, themes, layouts for different interfaces <br>
+            - Work in coherence with Brand Guidelines <br>
+            - Ability to create illustration and icons from the scratch <br>
+            - Proficiency in Sketch, Axure, Zeplin, Adobe XD, Illustrator & Photoshop <br>
+            - Ability to work effectively in a cross cultural environment  <br>
+            - Experience in Retail domain added advantage  <br>
+            - Ability to prioritize and manage multiple milestones and projects efficiently <br>
+            - Strong communication skills is a must <br>
+            Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is preferred. <br><br>
+          </div>
         </div>
         <div>
           <div class="div-aboutus-services">
-            <div class="text-h2-5">Established Brands</div>
+            <div class="text-h2-5-orange">UX Designer</div>
           </div>
-          <div class="text-h3 black">We work with mid-size or large-size organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacy system.</div>
-        </div>
-        <a href="services.html" class="text-button-link-1 w-inline-block">
-          <div class="button-link-icon"></div>
-          <div>Check out our services</div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="section-new clients">
-    <div class="wrapper clients w-container">
-      <div class="div-clients">
-        <div>
-          <div>OUR CLIENTS</div>
-        </div>
-        <div class="text-h2 black">We have built &amp; are building some great products together</div>
-      </div>
-      <div class="div-clients logo">
-        <div class="w-layout-grid grid-clients">
-          <img class="logo1" src="images/sify.svg" loading="lazy" alt="">
-          <img class="logo2" src="images/world-vision.svg" loading="lazy" alt="">
-          <img class="logo3" src="images/sgv.svg" loading="lazy" alt="">
-          <img class="logo4" src="images/l-n-t.svg" loading="lazy" alt="">
-          <img class="logo5" src="images/fca.svg" loading="lazy" alt="">
-          <img class="logo6" src="images/bfd.svg" loading="lazy" alt="">
+          <div class="text-h3 black">
+            Experience – 5 to 10 years <br>
+            Working Location – Chennai, India <br>
+            Notice Period – Immediate to 15 days <br><br>
+          </div>
+          <div class="text-h2-5-5-orange">Job Description</div>
+          <div class="text-h3 black">
+            - Experience in conducting user research, data analysis, conceptualisation, prototyping, wireframing, usability testing <br>
+            - Exposure to visual design <br>
+            - Strong communication skills for direct client co-ordination <br>
+            - Hand-on experience on tool - Adobe XD, Figma, Axure, Sketch <br>
+            - Problem-solving skills and the ability to optimize data for the best possible outcome <br>
+            - Ability to prioritize and manage multiple milestones and projects efficiently <br>
+            - Strong communication skills is a must <br>
+            - Experience in Insurance domain added advantage <br>
+            Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is preferred. <br><br>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="container-14-career w-container">
+    <div class="div-block-83">
+      <div class="text-h3-2 black">Candidates can share their resume with portfolio to <a href="mailto:work@uxmint.in" class="text-button-link-1 lower-case-1"> work@uxmint.in</a></div>
+    </div>
+  </div>
+
   <div class="section-new team">
     <!-- <div class="team-image"><img src="images/team-image-new.png" loading="lazy" srcset="images/team-image-new-p-500.png 500w, images/team-image-new-p-800.png 800w, images/team-image-new-p-1080.png 1080w, images/team-image-new.png 1126w" sizes="(max-width: 1126px) 100vw, 1126px" alt="" style="-webkit-filter: grayscale(1);"></div> -->
     <div class="wrapper w-container">
