--- a/usability-testing.html
+++ b/usability-testing.html
@@ -25,15 +25,15 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.svg" rel="apple-touch-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-2">
-  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/logo-2.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
+  <div class="nav-bar"><a href="index.html" aria-current="page" class="w-inline-block w--current"><img src="images/Mint.png" loading="lazy" alt=""></a><a  href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
-      <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
+      <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a><a href="career.html" class="text-navmenu-link-1">Career</a></div>
       <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="ui-design.html" class="text-navmenu-link-2">Interface Design</a><a href="ui-development.html" class="text-navmenu-link-2">UI Development</a><a href="end-to-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a   href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a></div>
@@ -428,17 +428,23 @@
               <div class="footer-divider-1"></div><a href="tel:+91 919940410072" class="text-link-2-footer">+91 9940410072</a></div>
             <div class="footer-contact"><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="text-link-2-footer">LinkedIn</a>
               <div class="footer-divider-1"></div><a href="https://medium.com/uxmint" target="_blank" class="text-link-2-footer">Medium</a></div>
+              <!-- <div class="footer-contact"><div class="location-icon"><img src="images/location-pin.svg"></div><div class="location-text">
+                Plot no, 16, <br>
+                Nethaji Street, <br>
+                Annai Indira Nagar, <br>
+                Okkiyam, Thoraipakkam, <br>
+                Tamilnadu - 600096</div></div> -->
           </div>
         </div>
         <div class="footer-block-2">
           <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="ui-design.html" class="text-link-2-footer">Interface Design</a><a href="ui-development.html" class="text-link-2-footer">UI Development</a><a href="end-to-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
-      <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
+      <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2021</a><a class="text-link-3-footer">Made with love 
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
       </svg> 
-      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
+      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy Policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
