--- a/engagement-models.html
+++ b/engagement-models.html
@@ -56,10 +56,10 @@
           <a data-w-tab="1" class="tab w-inline-block w-tab-link">
             <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewBox="0 0 31 31">
               <g id="Group_2" data-name="Group 2" transform="translate(-2371.5 -1295.5)">
-                <circle id="Ellipse_1" data-name="Ellipse 1" cx="15" cy="15" r="15" transform="translate(2372 1296)" fill="none" stroke="#776f3d" stroke-width="1"/>
-                <path id="lock" d="M72.293,4.479V3.567a3.567,3.567,0,1,0-7.134,0v.912a1.422,1.422,0,0,0-.713,1.228V9.988a1.428,1.428,0,0,0,1.427,1.427h5.708a1.428,1.428,0,0,0,1.427-1.427V5.708a1.422,1.422,0,0,0-.713-1.228ZM68.726,1.427a2.143,2.143,0,0,1,2.14,2.14v.713H66.585V3.567a2.143,2.143,0,0,1,2.14-2.14Zm.713,6.857v.991H68.012V8.284a1.07,1.07,0,1,1,1.427,0Z" transform="translate(2327.994 1311)" fill="#776f3d"/>
+                <circle id="Ellipse_1" data-name="Ellipse 1" cx="15" cy="15" r="15" transform="translate(2372 1296)" fill="none" stroke="currentColor" stroke-width="2"/>
+                <path id="lock" d="M72.293,4.479V3.567a3.567,3.567,0,1,0-7.134,0v.912a1.422,1.422,0,0,0-.713,1.228V9.988a1.428,1.428,0,0,0,1.427,1.427h5.708a1.428,1.428,0,0,0,1.427-1.427V5.708a1.422,1.422,0,0,0-.713-1.228ZM68.726,1.427a2.143,2.143,0,0,1,2.14,2.14v.713H66.585V3.567a2.143,2.143,0,0,1,2.14-2.14Zm.713,6.857v.991H68.012V8.284a1.07,1.07,0,1,1,1.427,0Z" transform="translate(2327.994 1311)" fill="currentColor"/>
                 <g id="dollar-symbol" transform="translate(2381.942 1301.238)">
-                  <path id="Path_1" data-name="Path 1" d="M124.426,8.869a23.508,23.508,0,0,0-2.387-1.081,5.36,5.36,0,0,1-1.311-.734,1.14,1.14,0,0,1,.282-2.028,2.3,2.3,0,0,1,.8-.165,6.091,6.091,0,0,1,3.016.6c.476.23.633.157.794-.339.169-.524.311-1.057.468-1.585a.554.554,0,0,0-.359-.738,7.668,7.668,0,0,0-1.9-.569c-.863-.133-.863-.137-.867-1,0-1.222,0-1.222-1.23-1.222-.177,0-.355,0-.532,0-.573.016-.669.117-.686.694-.008.258,0,.516,0,.778,0,.766-.008.754-.742,1.02a4.091,4.091,0,0,0-2.988,3.791,3.885,3.885,0,0,0,2.2,3.714,24.3,24.3,0,0,0,2.746,1.234,4.079,4.079,0,0,1,1,.589,1.371,1.371,0,0,1-.327,2.4,3.289,3.289,0,0,1-1.762.23,7.865,7.865,0,0,1-2.686-.8c-.5-.258-.641-.19-.811.347-.145.464-.274.932-.4,1.4-.173.629-.109.778.492,1.073a8.575,8.575,0,0,0,2.419.694c.653.1.673.133.681.811,0,.306,0,.617.008.923a.548.548,0,0,0,.589.621c.452.008.907.008,1.359,0a.517.517,0,0,0,.561-.585c0-.419.02-.843,0-1.262a.667.667,0,0,1,.577-.758,4.557,4.557,0,0,0,2.375-1.524A4.286,4.286,0,0,0,124.426,8.869Z" transform="translate(-116.652 0)" fill="#776f3d"/>
+                  <path id="Path_1" data-name="Path 1" d="M124.426,8.869a23.508,23.508,0,0,0-2.387-1.081,5.36,5.36,0,0,1-1.311-.734,1.14,1.14,0,0,1,.282-2.028,2.3,2.3,0,0,1,.8-.165,6.091,6.091,0,0,1,3.016.6c.476.23.633.157.794-.339.169-.524.311-1.057.468-1.585a.554.554,0,0,0-.359-.738,7.668,7.668,0,0,0-1.9-.569c-.863-.133-.863-.137-.867-1,0-1.222,0-1.222-1.23-1.222-.177,0-.355,0-.532,0-.573.016-.669.117-.686.694-.008.258,0,.516,0,.778,0,.766-.008.754-.742,1.02a4.091,4.091,0,0,0-2.988,3.791,3.885,3.885,0,0,0,2.2,3.714,24.3,24.3,0,0,0,2.746,1.234,4.079,4.079,0,0,1,1,.589,1.371,1.371,0,0,1-.327,2.4,3.289,3.289,0,0,1-1.762.23,7.865,7.865,0,0,1-2.686-.8c-.5-.258-.641-.19-.811.347-.145.464-.274.932-.4,1.4-.173.629-.109.778.492,1.073a8.575,8.575,0,0,0,2.419.694c.653.1.673.133.681.811,0,.306,0,.617.008.923a.548.548,0,0,0,.589.621c.452.008.907.008,1.359,0a.517.517,0,0,0,.561-.585c0-.419.02-.843,0-1.262a.667.667,0,0,1,.577-.758,4.557,4.557,0,0,0,2.375-1.524A4.286,4.286,0,0,0,124.426,8.869Z" transform="translate(-116.652 0)" fill="currentColor"/>
                 </g>
               </svg>
               </div>
@@ -69,10 +69,10 @@
             <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30.621" height="30.621" viewBox="0 0 30.621 30.621">
               <g id="Group_3" data-name="Group 3" transform="translate(-2506 -1298)">
                 <g id="back-arrow_1_" data-name="back-arrow (1)" transform="translate(2506 1298)">
-                  <path id="Path_6" data-name="Path 6" d="M15.311,30.621A16.184,16.184,0,0,1,4.4,26.295l-2.771,2.77A.956.956,0,0,1,0,28.388V20.1a.957.957,0,0,1,.957-.957H9.25a.956.956,0,0,1,.676,1.633L6.22,24.479a13.579,13.579,0,0,0,9.091,3.59,12.759,12.759,0,1,0,0-25.518A12.628,12.628,0,0,0,6.3,6.293a1.277,1.277,0,0,1-1.809-1.8A15.165,15.165,0,0,1,15.311,0a15.311,15.311,0,0,1,0,30.621Zm0,0" fill="#776f3d"/>
+                  <path id="Path_6" data-name="Path 6" d="M15.311,30.621A16.184,16.184,0,0,1,4.4,26.295l-2.771,2.77A.956.956,0,0,1,0,28.388V20.1a.957.957,0,0,1,.957-.957H9.25a.956.956,0,0,1,.676,1.633L6.22,24.479a13.579,13.579,0,0,0,9.091,3.59,12.759,12.759,0,1,0,0-25.518A12.628,12.628,0,0,0,6.3,6.293a1.277,1.277,0,0,1-1.809-1.8A15.165,15.165,0,0,1,15.311,0a15.311,15.311,0,0,1,0,30.621Zm0,0" fill="currentColor"/>
                 </g>
                 <g id="dollar-symbol" transform="translate(2518.644 1308)">
-                  <path id="Path_1" data-name="Path 1" d="M121.3,5.3a14.052,14.052,0,0,0-1.427-.646,3.2,3.2,0,0,1-.783-.439A.681.681,0,0,1,119.257,3a1.375,1.375,0,0,1,.48-.1,3.641,3.641,0,0,1,1.8.357c.284.137.378.094.475-.2.1-.313.186-.632.28-.947a.331.331,0,0,0-.215-.441,4.584,4.584,0,0,0-1.138-.34c-.516-.08-.516-.082-.518-.6,0-.73,0-.73-.735-.73-.106,0-.212,0-.318,0-.342.01-.4.07-.41.415,0,.154,0,.309,0,.465,0,.458,0,.451-.444.61a2.446,2.446,0,0,0-1.786,2.266,2.322,2.322,0,0,0,1.314,2.22,14.524,14.524,0,0,0,1.642.738,2.439,2.439,0,0,1,.6.352.82.82,0,0,1-.2,1.437,1.966,1.966,0,0,1-1.053.137,4.7,4.7,0,0,1-1.605-.48c-.3-.154-.383-.113-.485.207-.087.277-.164.557-.241.836-.1.376-.065.465.294.641a5.126,5.126,0,0,0,1.446.415c.391.063.4.08.407.485,0,.183,0,.369,0,.552a.328.328,0,0,0,.352.371c.27,0,.542,0,.812,0a.309.309,0,0,0,.335-.35c0-.251.012-.5,0-.755a.4.4,0,0,1,.345-.453,2.724,2.724,0,0,0,1.42-.911A2.562,2.562,0,0,0,121.3,5.3Z" transform="translate(-116.652 0)" fill="#776f3d"/>
+                  <path id="Path_1" data-name="Path 1" d="M121.3,5.3a14.052,14.052,0,0,0-1.427-.646,3.2,3.2,0,0,1-.783-.439A.681.681,0,0,1,119.257,3a1.375,1.375,0,0,1,.48-.1,3.641,3.641,0,0,1,1.8.357c.284.137.378.094.475-.2.1-.313.186-.632.28-.947a.331.331,0,0,0-.215-.441,4.584,4.584,0,0,0-1.138-.34c-.516-.08-.516-.082-.518-.6,0-.73,0-.73-.735-.73-.106,0-.212,0-.318,0-.342.01-.4.07-.41.415,0,.154,0,.309,0,.465,0,.458,0,.451-.444.61a2.446,2.446,0,0,0-1.786,2.266,2.322,2.322,0,0,0,1.314,2.22,14.524,14.524,0,0,0,1.642.738,2.439,2.439,0,0,1,.6.352.82.82,0,0,1-.2,1.437,1.966,1.966,0,0,1-1.053.137,4.7,4.7,0,0,1-1.605-.48c-.3-.154-.383-.113-.485.207-.087.277-.164.557-.241.836-.1.376-.065.465.294.641a5.126,5.126,0,0,0,1.446.415c.391.063.4.08.407.485,0,.183,0,.369,0,.552a.328.328,0,0,0,.352.371c.27,0,.542,0,.812,0a.309.309,0,0,0,.335-.35c0-.251.012-.5,0-.755a.4.4,0,0,1,.345-.453,2.724,2.724,0,0,0,1.42-.911A2.562,2.562,0,0,0,121.3,5.3Z" transform="translate(-116.652 0)" fill="currentColor"/>
                 </g>
               </g>
             </svg>
@@ -81,7 +81,7 @@
           </a>
           <a data-w-tab="3" class="tab w-inline-block w-tab-link">
             <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30.925" height="26.025" viewBox="0 0 30.925 26.025">
-              <path id="Path_7" data-name="Path 7" d="M18.662,10.815a5.619,5.619,0,0,1,2.615,4.175,4.534,4.534,0,1,0-2.615-4.175ZM15.691,20.1a4.535,4.535,0,1,0-4.536-4.535A4.536,4.536,0,0,0,15.691,20.1Zm1.924.309H13.766a5.814,5.814,0,0,0-5.807,5.808v4.707L7.971,31l.324.1a26.434,26.434,0,0,0,7.9,1.273,16.21,16.21,0,0,0,6.894-1.294l.3-.153h.032V26.218A5.812,5.812,0,0,0,17.615,20.41Zm7.5-4.682H21.3a5.59,5.59,0,0,1-1.725,3.893,6.9,6.9,0,0,1,4.929,6.6v1.45A15.627,15.627,0,0,0,30.59,26.4l.3-.154h.032V21.535A5.814,5.814,0,0,0,25.118,15.728ZM7.732,15.419a4.505,4.505,0,0,0,2.412-.7,5.613,5.613,0,0,1,2.11-3.58c0-.085.013-.169.013-.255a4.535,4.535,0,1,0-4.535,4.535Zm4.073,4.2a5.593,5.593,0,0,1-1.724-3.872c-.142-.01-.282-.022-.426-.022H5.807A5.814,5.814,0,0,0,0,21.535v4.707l.012.073.324.1a27.227,27.227,0,0,0,6.54,1.229V26.225A6.9,6.9,0,0,1,11.805,19.622Z" transform="translate(0 -6.348)" fill="#776f3d"/>
+              <path id="Path_7" data-name="Path 7" d="M18.662,10.815a5.619,5.619,0,0,1,2.615,4.175,4.534,4.534,0,1,0-2.615-4.175ZM15.691,20.1a4.535,4.535,0,1,0-4.536-4.535A4.536,4.536,0,0,0,15.691,20.1Zm1.924.309H13.766a5.814,5.814,0,0,0-5.807,5.808v4.707L7.971,31l.324.1a26.434,26.434,0,0,0,7.9,1.273,16.21,16.21,0,0,0,6.894-1.294l.3-.153h.032V26.218A5.812,5.812,0,0,0,17.615,20.41Zm7.5-4.682H21.3a5.59,5.59,0,0,1-1.725,3.893,6.9,6.9,0,0,1,4.929,6.6v1.45A15.627,15.627,0,0,0,30.59,26.4l.3-.154h.032V21.535A5.814,5.814,0,0,0,25.118,15.728ZM7.732,15.419a4.505,4.505,0,0,0,2.412-.7,5.613,5.613,0,0,1,2.11-3.58c0-.085.013-.169.013-.255a4.535,4.535,0,1,0-4.535,4.535Zm4.073,4.2a5.593,5.593,0,0,1-1.724-3.872c-.142-.01-.282-.022-.426-.022H5.807A5.814,5.814,0,0,0,0,21.535v4.707l.012.073.324.1a27.227,27.227,0,0,0,6.54,1.229V26.225A6.9,6.9,0,0,1,11.805,19.622Z" transform="translate(0 -6.348)" fill="currentColor"/>
             </svg>            
             </div>
             <div class="tab-text-1">Dedicated<br>Team Model</div>
@@ -90,13 +90,13 @@
             <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="34.844" height="20" viewBox="0 0 34.844 20">
               <g id="Group_4" data-name="Group 4" transform="translate(-2436.155 -1301)">
                 <g id="Group_1" data-name="Group 1" transform="translate(128 2)">
-                  <circle id="Ellipse_3" data-name="Ellipse 3" cx="3.5" cy="3.5" r="3.5" transform="translate(2332 1301)" fill="#776f3d"/>
-                  <circle id="Ellipse_4" data-name="Ellipse 4" cx="4.5" cy="4.5" r="4.5" transform="translate(2321 1299)" fill="#776f3d"/>
-                  <path id="Subtraction_1" data-name="Subtraction 1" d="M15,8H0A8.464,8.464,0,0,1,2.244,2.338a7.077,7.077,0,0,1,10.511,0A8.464,8.464,0,0,1,15,8Z" transform="translate(2328 1309)" fill="#776f3d"/>
-                  <path id="Subtraction_2" data-name="Subtraction 2" d="M19,10H0V9.971A9.755,9.755,0,0,1,9.5,0,9.755,9.755,0,0,1,19,9.971V10Z" transform="translate(2316 1309)" fill="#776f3d"/>
+                  <circle id="Ellipse_3" data-name="Ellipse 3" cx="3.5" cy="3.5" r="3.5" transform="translate(2332 1301)" fill="currentColor"/>
+                  <circle id="Ellipse_4" data-name="Ellipse 4" cx="4.5" cy="4.5" r="4.5" transform="translate(2321 1299)" fill="currentColor"/>
+                  <path id="Subtraction_1" data-name="Subtraction 1" d="M15,8H0A8.464,8.464,0,0,1,2.244,2.338a7.077,7.077,0,0,1,10.511,0A8.464,8.464,0,0,1,15,8Z" transform="translate(2328 1309)" fill="currentColor"/>
+                  <path id="Subtraction_2" data-name="Subtraction 2" d="M19,10H0V9.971A9.755,9.755,0,0,1,9.5,0,9.755,9.755,0,0,1,19,9.971V10Z" transform="translate(2316 1309)" fill="currentColor"/>
                 </g>
-                <path id="Path_8" data-name="Path 8" d="M2437.5,1310.81v7.845" transform="translate(2.577 -1.422)" fill="none" stroke="#776f3d" stroke-width="1"/>
-                <path id="Path_9" data-name="Path 9" d="M0,0V7.845" transform="translate(2444 1313.311) rotate(90)" fill="none" stroke="#776f3d" stroke-width="1"/>
+                <path id="Path_8" data-name="Path 8" d="M2437.5,1310.81v7.845" transform="translate(2.577 -1.422)" fill="none" stroke="currentColor" stroke-width="1"/>
+                <path id="Path_9" data-name="Path 9" d="M0,0V7.845" transform="translate(2444 1313.311) rotate(90)" fill="none" stroke="currentColor" stroke-width="1"/>
               </g>
             </svg>
             </div>
@@ -164,17 +164,17 @@
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
         <a href="#Fixed-Bid" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 2.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 1.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Fixed Bid</div>
         </a>
         <a href="#Time-&-Material" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 3.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 2.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Time & <br>Material</div>
         </a>
         <a href="#Dedicated-Team-Model" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group 1.svg" loading="lazy" alt=""
+          <div class="div-services-grid"><img src="images/Group 3.svg" loading="lazy" alt=""
               class="icon-services"></div>
           <div class="text-h5-grey-2">Dedicated <br>Team Model</div>
         </a>
